--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,42 +1,36 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root{
+  --sxxx:0.2rem;
+  --sxx:0.4rem;
+  --sx:0.6rem;
+  --s:0.8rem;
+
+  --m:1rem;
+  --mx:1.2rem;
+  --mxx:1.6rem;
+  --mxxx:2.4rem;
+
+  --l:4rem;
+  --lx:7.2rem;
+  --lxx:13.6rem;
+  --lxxx:16.4rem;
+
+  --primary:white;
+  --secondary:#F5F5F5;
+  --tertiary:#D9D9D9;
+  --accent:#6200EA;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+*{
+  box-sizing:border-box;
+  position:relative;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+  margin:0 auto;
+  font-size:1rem;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.centered{
+  left:50%;
+  transform:translate(-50%,0%)
 }
