--- a/frontend/src/styles/Homepage.css
+++ b/frontend/src/styles/Homepage.css
@@ -49,6 +49,9 @@
     border-radius:var(--l);
     top:250px;
 }
+.searchBar:hover{
+    box-shadow:2px 2px 12px 2px var(--tertiary)
+}
 .searchBar i{
     width:40px;
     aspect-ratio:1;
@@ -76,6 +79,9 @@
     border-radius:var(--l);
     text-transform:capitalize;
 }
+.seeAllButton:hover,.seeMoreButton:hover{
+    background:var(--accent-hover)
+}
 .seeMoreButton{
     width:180px;
     margin:8px 0px;
@@ -94,18 +100,22 @@
     display:flex;
     justify-content:flex-start;
     align-items:center;
-    gap:12px;
+    gap:20px;
     padding:4px;
     margin-top:4px;
     overflow-x:scroll;
 }
 .card{
     flex-shrink:0;
-    width:30%;
+    width:25%;
     height:100%;
     background:var(--secondary);
     padding:4px;
     border-radius:var(--m);
+}
+.card:hover{
+    border:1px solid var(--secondary);
+    box-shadow:2px 2px 12px 2px var(--tertiary);
 }
 .card-image{
     width:100%;
@@ -124,6 +134,7 @@
     left:-12px;
 }
 .card-info{
+    text-transform:capitalize;
     padding:0px 12px 12px;
 }
 .card-rating{
@@ -144,7 +155,7 @@
 
 .footer{
     width:100%;
-    height:60vh;
+    height:75vh;
     background:var(--secondary);
     padding:var(--m);
     display:flex;
@@ -159,7 +170,7 @@
 }
 .aboutUs .social{
     width:40px;
-    top:var(--mxx);
+    top:var(--l);
     aspect-ratio:1;
     background:var(--tertiary);
     border-radius:50%;
