--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -14,6 +14,7 @@
   --lxx:13.6rem;
   --lxxx:16.4rem;
 
+  --text:#333;
   --primary:white;
   --secondary:#F5F5F5;
   --tertiary:#D9D9D9;
@@ -24,14 +25,21 @@
 *{
   box-sizing:border-box;
   position:relative;
+  user-select:none;
 }
 
 body{
   margin:0 auto;
   font-size:1rem;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
+  color:var(--text);
 }
-.centered{
+.selfCentered{
   left:50%;
   transform:translate(-50%,0%)
+}
+.childCentered{
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
