--- a/frontend/src/styles/Homepage.css
+++ b/frontend/src/styles/Homepage.css
@@ -1,12 +1,24 @@
 .header{
     width:100%;
-    height:580px;
-    background:var(--tertiary);
+    height:400px;
+    background:var(--tertiary) center no-repeat;
+    background-image:url(/public/imgs/land-4.avif);
+    background-size:cover;
+    top:-40px;
+}
+.header::before{
+    content:'';
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:#00000055;
 }
 .dp{
     width:50px;
     aspect-ratio:1;
-    font-size:var(--l);
+    font-size:var(--mxxx);
     background:inherit;
     border-radius:50%;
 }
@@ -18,7 +30,7 @@
 }
 .navbar{
     width:100%;
-    height:80px;
+    height:60px;
     background:var(--secondary);
     display:flex;
     justify-content:space-around;
@@ -37,21 +49,22 @@
     padding:var(--s) var(--mx);
 }
 .slogan{
+    color:var(--primary);
     width:80%;
     font-size:var(--mxxx);
     font-weight:bold;
     text-align:center;
-    top:180px;
+    top:100px;
 }
 .searchbar{
     width:40%;
     height:50px;
     background:var(--secondary);
     border-radius:var(--l);
-    top:250px;
+    top:200px;
 }
 .searchbar:hover{
-    box-shadow:2px 2px 12px 2px var(--tertiary)
+    box-shadow:2px 2px 4px 0px black;
 }
 .searchbar span{
     width:40px;
