--- a/frontend/src/styles/Listings.css
+++ b/frontend/src/styles/Listings.css
@@ -12,7 +12,8 @@
 .listings-map{
     width:40vw;
     height:calc(100vh - 80px);
-    background:var(--tertiary);
+    background:var(--primary);
+    object-fit:contain;
 }
 .listings-searchbar{
     display:inline-block;
@@ -22,6 +23,7 @@
     border-radius:var(--mxx);
 }
 .filter{
+    font-size:var(--m);
     width:100%;
     height:50px;
     top:-4px;
@@ -47,10 +49,13 @@
 }
 .filter-selected span{
     text-transform:capitalize;
-    font-size:var(--s);
+    font-size:var(--sx);
     background:var(--primary);
-    padding:2px;
-    border-radius:2px;
+    padding:4px 8px;
+    border-radius:var(--l);
+}
+.chevron-down{
+    transform:rotate(90deg);
 }
 .propertyListings{
     width:100%;
@@ -63,20 +68,30 @@
     justify-content:flex-start;
     align-items:center;
     gap:var(--m);
+    overflow:scroll;
 }
+
 .listingsCard{
     flex-shrink:0;
-    width:90%;
-    height:200px;
-    background:var(--secondary);
-    border-radius:var(--sxx);
-    padding:var(--sxx);
+    width:600px;
+    height:220px;
+    background:var(--primary);
+    border:1px solid var(--tertiary);
+    border-radius:var(--s);
+    padding:var(--sxxx);
     display:flex;
+    justify-content:space-between;
+}
+.listingsCard:hover{
+    border:1px solid var(--secondary);
+    box-shadow:2px 2px 12px 2px var(--tertiary);
 }
 .listingsCard-img{
     width:50%;
     height:100%;
     background:var(--tertiary);
+    border-top-left-radius:inherit;
+    border-bottom-left-radius:inherit;
 }
 .listingsCard-info{
     width:50%;
@@ -84,9 +99,54 @@
     background:var(--primary);
     padding:var(--sxx);
 }
+.listingsCard-favourite{
+    background:var(--secondary);
+    padding:6px;
+    position:absolute;
+    left:-44px;
+    top:4px;
+    border-radius:50%;
+}
+.location-icon{
+    position:absolute;
+    left:0px;
+    color:var(--accent);
+}
+.listingsCard-location{
+    text-transform:capitalize;
+    top:-16px;
+    left:var(--mx);
+}
+.listingsCard-specs{
+    width:100%;
+    height:80px;
+    top:-20px;
+    padding:4px;
+    display:flex;
+    flex-flow:column wrap;
+    justify-content:space-between;
+    align-items:flex-start;
+
+}
+.specs::before{
+    content:'°';
+    color:var(--accent);
+    position:relative;
+    left:var(--m);
+    margin-right:var(--mx);
+}
+.listingsCard-price{
+    font-size:var(--mx);
+    position:absolute;
+    bottom:32px;
+}
 .listingsCard-contact{
+    text-transform:uppercase;
+    font-size:var(--s);
     width:70%;
-    height:50px;
+    height:30px;
+    position:absolute;
+    bottom:-8px;
     color:var(--primary);
     background:var(--accent);
     border-radius:var(--sxx);
